Fix spacing and overflow in area selector mobile view

--- a/projects/srm/src/app/area-search-selector/area-search-selector.component.less
+++ b/projects/srm/src/app/area-search-selector/area-search-selector.component.less
@@ -69,7 +69,7 @@
                 display: flex;
                 flex-flow: row;
                 align-items: center;
-                gap: 4px;
+                gap: 2px;
             }
             &.active {
                 color: @color-blue-0;
@@ -81,11 +81,11 @@
                 }
             }
             &:not(.active) {
+                margin: 0 -6px;
                 &.map-region {
                     background-image: none;
                     width: 0;
                     padding: 0;
-                    margin-left: -4px;
                 }
                 &.nation-wide {
                     background-image: url(../../assets/img/icon-nation-wide-blue-3.svg);
@@ -101,7 +101,6 @@
             background: none;
             border: none;
             padding: 0;
-            padding-left: 16px;
             padding-right: 38px;
             border-radius: 24px;
             color: @color-blue-0;
@@ -140,6 +139,7 @@
                 background-image: url(../../assets/img/icon-search-blue-0.svg);
                 font-size: 20px;
                 color: @color-blue-1;
+                padding-left: 16px;
 
                 &::placeholder {
                     color: @color-blue-2;
